[Coder] added PartialCoder API similar to FieldCodeable - classes may provider a method/extensions "Coders : int -> list<PartialCoder>" - versioning is controlled using the [Version(int)] attribute either directly on the type or the Coders-Extension - F# friendly API simplifying the creation of those PartialCoders (including skipped values)

--- a/src/Tests/Aardvark.Base.Runtime.Tests/Aardvark.Base.Runtime.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Runtime.Tests/Aardvark.Base.Runtime.Tests.fsproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="DynamicCode.fs" />
     <Compile Include="CoderTests.fs" />
+    <Compile Include="ReflectionTests.fs" />
     <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
