--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -63,7 +63,9 @@
     <Compile Include="PureAgTests.fs" />
     <Compile Include="NativeMemory.fs" />
     <Compile Include="Fragments.fs" />
+    <Compile Include="ControlTests.fs" />
     <Compile Include="SortedSetExt.fs" />
+    <Compile Include="Entry.fs" />
     <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
