--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -96,6 +96,11 @@
     <Compile Include="NewAg.fs" />
     <Compile Include="Control.fs" />
     <None Include="paket.references" />
+    <Compile Include="Native\Pointer.fs" />
+    <Compile Include="Native\Memory.fs" />
+    <Compile Include="Native\FileTable.fs" />
+    <Compile Include="Native\Manager.fs" />
+    <Compile Include="Native\Store.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
